--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - 292004 Wiki</title>
+    <title>Home - 292004 Wiki</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,13 +14,12 @@
 
     <nav>
         <div class="nav-container">
-                </div>
-            </div>
+            <a href="index.html">Home</a>
         </div>
     </nav>
 
     <div id="mainContent">
-        <h2>About 292004 Wiki</h2>
+        <h2>Welcome to 292004 Wiki!</h2>
         <p>292004 Wiki is a collaborative platform where users can create, share, and edit content on various topics. Our goal is to provide a comprehensive and user-friendly resource for everyone.</p>
         <p>Whether you're looking to learn something new or share your knowledge, 292004 Wiki is here for you!</p>
     </div>
