--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -14,7 +14,7 @@
 
     <nav>
         <div class="nav-container">
-            <a href="index.html">Home</a>
+            <a href="https://29if.github.io/wiki-292004/index.html">Home</a>
         </div>
     </nav>
 
