--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="dropdown">
                 <button class="dropbtn">More</button>
                 <div class="dropdown-content">
-                    <a href="pages/About/about.html">About</a>
-                    <a href="#">Contact</a>
-                    <a href="#">Help</a>
+                    <a href="pages/about.html">About</a>
+                    <a href="pages/contactwiki.html">Contact</a>
+                    <a href="pages/help.html/">Help</a>
                 </div>
             </div>
         </div>
