--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
 
     <nav>
         <div class="nav-container">
-            <a href="index.html">Home</a>
+            <a href="https://29if.github.io/wiki-292004">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">More</button>
                 <div class="dropdown-content">
