--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
 
     <nav>
         <div class="nav-container">
-            <a href="https://29if.github.io/wiki-292004">Home</a>
+            <a href="index.html">Home</a>
             <div class="dropdown">
                 <button class="dropbtn">More</button>
                 <div class="dropdown-content">
@@ -30,6 +30,7 @@
         <h2>Welcome to 292004 Wiki!</h2>
         <p>292004 Wiki is a collaborative platform where users can create, share, and edit content on various topics. Our goal is to provide a comprehensive and user-friendly resource for everyone.</p>
         <p>Whether you're looking to learn something new or share your knowledge, 292004 Wiki is here for you!</p>
+	    <p>I created this wiki because there are no ads here, but it won't appear on Google search except for those from the old wiki, although I can leave links and they will still be seen even if it doesn't show up on Google search</p>
         </div>
     </div>
 </div>
