--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="dropdown-content">
                     <a href="pages/about.html">About</a>
                     <a href="pages/contactwiki.html">Contact</a>
-                    <a href="pages/help.html/">Help</a>
+                    <a href="pages/help.html">Help</a>
                 </div>
             </div>
         </div>
