--- a/pages/ImIACOB.html
+++ b/pages/ImIACOB.html
@@ -29,8 +29,7 @@
 <div id="mainContent">
     <div class="infobox" style="width: 200px; background-color: #4a0072; color: white; padding: 10px; border: 1px solid #6a1b9a; border-radius: 5px; float: right; margin-left: 20px;">
         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhUgqObXyujJGFoIX_NGkEF_cei-JovkYPug4nibsEpL7bTRnYq9dxsN-uqrHu19ap1UNzhQl3taklkZec5ALBPvaptzFcZJznWXDcz21-iFtNESI72i95LcNHncSr_75yfz1zgUrm9nI7A8GQw8LSg3hMHJPhAFEGyoXDcb1ljBIu9q4M/s1600/channels4_profile.jpg" alt="Friend's image" style="width: 100%; height: auto; border-radius: 5px;">
-        <h4 style="margin: 10px 0;">Iacob</h4>
-        <p><strong>Date of Birth:</strong>_ __ __</p>
+        <h4 style="margin: 10px 0;">ImIACOB</h4>
         <p><strong>Location:</strong>Romania</p>
     </div>
     <h2>Hi!</h2>
